--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal boilerplate for cli apps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src"
   },
   "keywords": [
     "cli",
@@ -16,9 +16,15 @@
     "@babel/core": "^7.0.0-beta.44",
     "@babel/polyfill": "^7.0.0-beta.44",
     "@babel/register": "^7.0.0-beta.44",
-    "eslint": "^4.19.1"
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-prettier": "^2.6.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.44",
     "app-module-path": "^2.2.0"
   }
 }
