--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
     "@babel/polyfill": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/register": "^7.0.0-beta.44",
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.44",
-    "app-module-path": "^2.2.0"
+    "app-module-path": "^2.2.0",
+    "commander": "^2.15.1"
   }
 }
