--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal boilerplate for cli apps",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "build": "gulp build"
   },
   "keywords": [
     "cli",
@@ -14,15 +15,23 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
     "@babel/polyfill": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/register": "^7.0.0-beta.44",
     "babel-eslint": "^8.2.2",
+    "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-prettier": "^2.6.0"
+    "eslint-plugin-prettier": "^2.6.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-remove-code": "^2.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "run-sequence": "^2.2.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.44",
