--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,5 @@ typings/
 # dotenv environment variables file
 .env
 
-
-
-# End of https://www.gitignore.io/api/node
+# Config file
+src/config/config.json
