--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.44",
     "app-module-path": "^2.2.0",
-    "commander": "^2.15.1"
+    "commander": "^2.15.1",
+    "flavors": "^3.3.1"
   }
 }
